Update link to Stopwatch

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <hr />
     <h3>Portfolio Projects</h3> 
     <ul>
-      <li><a href="https://kryptokingjohn.github.io/Stopwatch/index.html"></a> Stopwatch</a> (HTML, CSS, Javascript)</li>
+      <li><a href="https://kryptokingjohn.github.io/Stopwatch/index.html">Stopwatch</a> (HTML, CSS, Javascript)</li>
       <li>Tic Tac Toe (HTML, CSS, Javascript)</li>
       <li>Budget Tool (Python, Google Sheets integration)</li>
     </ul>
